git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@661 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/comordencompra/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/comordencompra/startup.vm
@@ -60,7 +60,7 @@
 				<td width="180">Nombre&nbsp;producto</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"></td>
-				<td colspan="3">Fecha de creaci&oacute;n</td>
+				<td colspan="3">Fecha&nbsp;de&nbsp;creaci&oacute;n</td>
 				<td width="20"></td>
 				<td></td>
 				<td width="25"></td>
