--- a/erp-quimicos/src/main/webapp/vm/layouts/header.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/header.vm
@@ -10,6 +10,10 @@
 	<link rel="stylesheet" href="../../css/components/Datepicker/datepicker.css" type="text/css">
 	<link rel="stylesheet" href="../../css/components/tablescroll/jquery.tablescroll.css" type="text/css">
 	
+	<!--Multiselect-->
+	<link rel="stylesheet" href="../../css/components/jquery-ui/jquery-ui.css" type="text/css">
+	<link rel="stylesheet" href="../../css/components/MultiSelect/jquery.multiselect.css" type="text/css">
+	<!--<link rel="stylesheet" href="../../css/components/MultiSelect/style.css" type="text/css">-->
 	
 	<script type="text/javascript" src="../../js/jquery.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/elastic.js" charset="utf-8"></script>
@@ -38,5 +42,9 @@
 	<script type="text/javascript" src="../../js/components/menu/jquery.dimensions.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/menu/jquery.jdMenu.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/menu/jquery.positionBy.js" charset="utf-8"></script>
+	
+	<!--Multiselect-->
+	<script type="text/javascript" src="../../js/components/jquery-ui/jquery-ui.min.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../../js/components/MultiSelect/jquery.multiselect.js" charset="utf-8"></script>
 	
 	<script type="text/javascript" src="../../js/components/aplicaEvento/aplica_evento.js"></script>
