git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@668 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -28,6 +28,17 @@
 										<a href="#" class="accessible">Cotizaciones &raquo;</a>
 										<ul>
 											<li>
+												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
+												<ul>
+													<!--
+													<li class="topline"><a href="../cotincoterms/startup.agnux">Condiciones Comerciales</a></li>
+													<li class="topline"><a href="../cotincoterms/startup.agnux">Pol&iacute;ticas de Pago</a></li>
+													-->
+													<li class="topline"><a href="../cotincoterms/startup.agnux">Incoterms</a></li>
+													
+												</ul>
+											</li>
+											<li>
 												<a href="#" class="menulink_">Procesos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../cotizaciones/startup.agnux">Cotizaci&oacute;n</a></li>
@@ -37,8 +48,6 @@
 												<a href="#" class="menulink_">Configuraciones &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../cotizacionsaludodesp/startup.agnux">Saludo y Despedida</a></li>
-													<li class="topline"><a href="../cotizaciones/startup.agnux">Condiciones Comerciales</a></li>
-													<li class="topline"><a href="../cotizaciones/startup.agnux">Pol&iacute;ticas de Pago</a></li>
 												</ul>
 											</li>
 										</ul>
