--- a/erp-quimicos/src/main/webapp/vm/repinvexislote/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repinvexislote/startup.vm
@@ -92,11 +92,12 @@
 							<thead>
 								<tr>
 									<td width="20">#&nbsp;</td>
-									<td width="70">Cantidad&nbsp;</td>
-									<td width="70">Medida&nbsp;</td>
-									<td width="120">Lote&nbsp;Interno</td>
-									<td width="110">Lote&nbsp;Proveedor</td>
-									<td width="110">C&oacute;digo</td>
+									<td width="60">Cant. Et.&nbsp;</td>
+                                                                        <td width="60">Cant. Prod.</td>
+									<td width="60">Medida&nbsp;</td>
+									<td width="100">Lote&nbsp;Interno</td>
+									<td width="100">Lote&nbsp;Proveedor</td>
+									<td width="100">C&oacute;digo</td>
 									<td width="350">Descripci&oacute;n</td>
 									<td width="100">Unidad</td>
 									<td width="100">Existencia</td>
