--- a/erp-quimicos/src/main/webapp/vm/repinvmovimientos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repinvmovimientos/startup.vm
@@ -109,23 +109,23 @@
                 <td>&nbsp;&nbsp;</td>
                 <td>
 					<div>
-						<table id="table_exis" cellspacing="0">
+						<table id="table_movimientos" cellspacing="0" width="100%">
 							<thead>
 								<tr>
-									<td width="100">C&oacute;digo</td>
-									<td width="250">Descripci&oacute;n</td>
-									<td width="120">Referencia</td>
-									<td width="150">Tipo&nbsp;Movimiento</td>
-									<td width="90">Fecha&nbsp;</td>
-									<td width="70">Sucursal&nbsp;</td>
-									<td width="70">Almacen&nbsp;</td>
-									<td width="70">Cantidad&nbsp;</td>
-									<td width="90">Valor&nbsp;Unitario</td>
-									<td width="90">Valor&nbsp;Entrada</td>
-									<td width="90">Valor&nbsp;Salida</td>
+
+									<td width="100px">Referencia</td>
+									<td width="300px">Tipo&nbsp;Movimiento</td>
+									<td width="100px">Fecha&nbsp;</td>
+									<td width="200px">Sucursal&nbsp;</td>
+									<td width="200px">Almacen&nbsp;</td>
+									<td width="100px">Cantidad&nbsp;</td>
+									<td width="100px">Costo</td>
+									<td width="100px">Existencia</td>
+
 								</tr>
 							</thead>
 							<tbody>
+
 							</tbody>
 							<tfoot>
 							</tfoot>
