--- a/erp-quimicos/src/main/webapp/vm/crmbigpicture/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmbigpicture/startup.vm
@@ -104,17 +104,26 @@
             <tr>
                 <td>&nbsp;&nbsp;</td>
                 <td>
-                    <div id="tablaresultadosvisitas">
-                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
-                    </div>
-                    <div id="tablaresultadosllamadas">
-                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
-                    </div>
-                    <div id="tablaresultadoscasos">
-                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
-                    </div>
-                    <div id="tablaresultadosoportunidades">
-                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
+                    <div class="content_results" style="display:none; margin:10px; background:#fff; border-radius:4px;">
+                        <table>
+                            <tr>
+                                <td>&nbsp;&nbsp;</td>
+                                <td>
+                                    <div id="tablaresultadosvisitas">
+                                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
+                                    </div>
+                                    <div id="tablaresultadosllamadas">
+                                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
+                                    </div>
+                                    <div id="tablaresultadoscasos">
+                                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
+                                    </div>
+                                    <div id="tablaresultadosoportunidades">
+                                            <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </td>
             </tr>
